# MJLib

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
src/: Test.cpp
src/MJLib_BasicsSupport/: CMakeLists.txt  MJLib_BasicsSupport.cpp  MJLib_threadpool.cpp  MJLib_threadpool.h
src/MJLib_CNN/: CMakeLists.txt  Test.cpp  mjlib_cnn.cpp  mjlib_cnn.h  mjlib_cnn_api.cpp  mjlib_cnn_api.h  mjlib_cnn_macro.h
src/MJLib_Camera/: CMakeLists.txt  MJLib_Camera.cpp  MJLib_Camera.h  mjlib_camera_api.h  mjlib_camera_macro.h  mjlib_localcamera.cpp  mjlib_localcamera.h  mjlib_mvcamera.cpp  mjlib_mvcamera.h
src/MJLib_DataProcess/: CMakeLists.txt  class_name.txt  mjlib_datacommumication.cpp  mjlib_datacommumication.h  mjlib_dataconvert.cpp  mjlib_dataconvert.h  mjlib_dataprocess_api.cpp  mjlib_dataprocess_api.h  mjlib_dataprocess_global.h  mjlib_dataprocess_macro.h  mjlib_dataprocess_test.cpp  mjlib_frequencydomain.cpp  mjlib_frequencydomain.h  mjlib_numerical.hpp  mjlib_prob.cpp  mjlib_prob.h  mjlib_timedomain.cpp  mjlib_timedomain.h
src/MJLib_DataProcess/include/: mjlib_dataprocess_api.h
src/MJLib_FileIO/: CMakeLists.txt  mjlib_fileio_macro.h  mjlib_fileio_test.cpp  mjlib_filetxt.cpp  mjlib_filetxt.h
src/MJLib_Log/: CMakeLists.txt  info.log20240506-150014.30896  mjlib_log_api.cpp  mjlib_log_api.h  mjlib_log_core.cpp  mjlib_log_core.h  mjlib_log_global.h  mjlib_log_test.cpp
src/MJLib_Net/: CMakeLists.txt  mjlib_net_api.cpp  mjlib_net_api.h  mjlib_net_global.h  mjlib_net_siemensclient.cpp  mjlib_net_siemensclient.h  mjlib_net_tcp.cpp  mjlib_net_tcp.h  mjlib_net_test.cpp
src/MJLib_SVM/: CMakeLists.txt  mjlib_svm.cpp  mjlib_svm.h  mjlib_svm_api.cpp  mjlib_svm_api.h  mjlib_svm_macro.h  mjlib_test.cpp
src/MJLib_Siemens/: CMakeLists.txt  mjlib_siemens_api.cpp  mjlib_siemens_api.h  mjlib_siemens_global.h  mjlib_siemens_macro.h  mjlib_siemens_test.cpp  mjlib_siemensclient.cpp  mjlib_siemensclient.h  snap7_libmain.cpp
src/MJLib_Vision/: CMakeLists.txt  mjlib_Vision_test.cpp  mjlib_Vision_test.h  mjlib_edgedetection.cpp  mjlib_edgedetection.h  mjlib_imagefileio.cpp  mjlib_imagefileio.h  mjlib_imageprocess.cpp  mjlib_imageprocess.h  mjlib_imagestatistics.cpp  mjlib_imagestatistics.h  mjlib_vision_api.cpp  mjlib_vision_api.h  mjlib_vision_macro.h
